add math fact API endpoint
