# src/v1-api/types/oas.ts
@@ -2,7 +2,7 @@ import type { components, operations } from "./oas-generated.js";
 
 export type GameType = components["schemas"]["GameType"];
 
-export type APIErrorResponse = components["schemas"]["ErrorResponse"];
+export type APIError = components["schemas"]["APIError"];
 
 export type TriviaPathParams =
 	operations["getTriviaForNumber"]["parameters"]["path"];
@@ -11,4 +11,14 @@ type TriviaResponse =
 	operations["getTriviaForNumber"]["responses"]["200"]["content"]["application/json"];
 export type TriviaOutput = Omit<TriviaResponse, "type"> & {
 	type: "trivia";
+};
+
+export type MathPathParams =
+	operations["getMathFactForNumber"]["parameters"]["path"];
+
+type MathResponse =
+	operations["getMathFactForNumber"]["responses"]["200"]["content"]["application/json"];
+
+export type MathFactOutput = Omit<MathResponse, "type"> & {
+	type: "math";
 };
